objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>Contact&apos;s role in reference to Promissor</description>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Active with the organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer with organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Reference</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Communications_Permissions__c</fullName>
        <label>Marketing Communications Permissions</label>
        <picklist>
            <picklistValues>
                <fullName>Permission requested by BDM/PM – opt-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permission requested by BDM/PM and not given – opt-out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing inbox – opt-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing inbox – opt-out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this contact for the organization</description>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VTS_Agent_ID__c</fullName>
        <description>This field is completed as part of the user provisioning process.  It is the unique identifier for a user from the VTS System.  It is on both user and contact</description>
        <externalId>true</externalId>
        <label>VTS Agent ID</label>
        <length>21</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>G2_Contact</fullName>
        <active>true</active>
        <label>G2 Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regulatory_Contact</fullName>
        <active>true</active>
        <label>Regulatory Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>